# hubzoid

./: .dockerignore  .gitignore  .webui_secret_key  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  README.md  pyproject.toml  requirements.txt
.claude/skills/update-knowledge/: SKILL.md
.github/workflows/: ci.yml
demo-hub/: AGENTS.md
demo-hub/knowledge/: hub-folder-layout.md  what-is-hubzoid.md
docker/: Dockerfile  docker-compose.yml
docs/: DEPLOYING.md  access-management-design.html  access-management-user-stories.html  access-management.html  access-management.md  admin-experience.html  auth.md  authoring-a-hub.md  branding.md  irshub-product-coach-design.html  knowledge.md  mcp.md  providers.md  quickstart.md  schedule.md  slack.md
ee/: LICENSE  README.md
hubzoid/: __init__.py  __main__.py  _fs.py  _request_ctx.py  _signing.py  branding.py  caching.py  cli.py  edge.py  factory.py  factory_claude.py  frontmatter.py  gateway.py  knowledge_sync.py  licensing.py  memory.py  model.py  owui.py  reasoning.py  runtime.py  schedule_runner.py  scheduler.py  scheduling.py  server.py  settings.py  system_addendum.py  tool_events.py  upload_previews.py  uploads.py  webui.py
hubzoid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hubzoid/access/: __init__.py  audit.py  guard.py  identity.py  loader.py  owui_groups.py  policy.py
hubzoid/loaders/: agents.py  knowledge.py  mcp.py  skills.py  tools_local.py
hubzoid/slack/: __init__.py  adapter.py  conversion.py  env.py  files.py  manifest.py  service.py
hubzoid/templates/demo/: .gitignore
hubzoid/templates/demo/agents/: builder.md
hubzoid/templates/demo/branding/: README.md
hubzoid/templates/demo/knowledge/: agents-md-format.md  hub-folder-layout.md  mcp-and-connectors.md  three-agent-types.md  welcome.md
hubzoid/templates/demo/skills/: build-first-agent.md  explain-skills.md  find-the-docs.md  inspect-this-hub.md
hubzoid/templates/demo/tools_local/: word_count.py
hubzoid/templates/minimal/: AGENTS.md
hubzoid/templates/minimal/agents/: helper.md
hubzoid/templates/minimal/knowledge/: about.md
hubzoid/templates/minimal/raw_data/: README.md
hubzoid/templates/minimal/schedule/: example.md
hubzoid/templates/minimal/skills/: hello.md
hubzoid/templates/minimal/tools_local/: hello.py
hubzoid/templates/starter/: .env.example  AGENTS.md
hubzoid/templates/starter/knowledge/: example.md
hubzoid/templates/starter/skills/example/: SKILL.md
hubzoid/templates/starter/tools_local/: current_time.py
hubzoid/tools/: __init__.py  _caps.py  current_time.py  files.py  grep_data.py  knowledge.py  memory.py  render.py  schedule_tools.py  skills_tool.py  web_http.py
my-hub/: .env.example  .gitignore  AGENTS.md
my-hub/agents/example/: AGENTS.md
my-hub/tools_local/: example.py
pocs/access-control/: README.md  demo.py  dispatch.py  requirements.txt
pocs/access-control/authz/: __init__.py  mock_provider.py
pocs/permit-access-control/: README.md  demo.py  dispatch.py  real_check.py  requirements.txt
pocs/permit-access-control/authz/: __init__.py  mock_provider.py  permit_provider.py
reports/: raw_data_FINAL_report.html  raw_data_e2e_report.html  raw_data_feature_report.html
tests/: test_access.py  test_access_secrets.py  test_artifact_surfacing.py  test_branding.py  test_caps.py  test_chat_artifacts.py  test_claude_local_setup.py  test_cli_license.py  test_cli_run.py  test_edge.py  test_factory.py  test_factory_claude_tool_gating.py  test_frontmatter.py  test_fs.py  test_gateway.py  test_grep_data.py  test_init.py  test_knowledge_sync.py  test_licensing.py  test_loaders.py  test_model.py  test_owui_attachments.py  test_owui_branding_patch.py  test_preview_footers.py  test_read_upload.py  test_read_upload_full.py  test_reasoning_effort.py  test_runtime_mcp.py  test_runtime_model_default.py  test_schedule.py  test_server.py  test_show_tools.py  test_slack_adapter.py  test_slack_conversion.py  test_slack_files.py  test_slack_files_dedup.py  test_slack_integration.py  test_slack_manifest.py  test_slack_thinking.py  test_system_addendum.py  (+6 more)
tests/e2e/: test_claude_local_skills.py  test_demo_hub_smoke.py  test_my_hub_smoke.py  test_schedule_e2e.py
tests/fixtures/claude_local_hub/: AGENTS.md
tests/fixtures/claude_local_hub/agents/echo-promoted/: AGENTS.md
tests/fixtures/claude_local_hub/knowledge/: magic-number.md
tests/fixtures/claude_local_hub/raw_data/repo-zeta/notes/: CONFIG.md
tests/fixtures/claude_local_hub/skills/lookup-secret-code/: SKILL.md
tests/fixtures/minimal_hub/: AGENTS.md
tests/fixtures/minimal_hub/agents/echo/: AGENTS.md
tests/fixtures/minimal_hub/knowledge/: colors.md
tests/fixtures/minimal_hub/skills/greet/: SKILL.md
tests/fixtures/minimal_hub/tools_local/: sentinel.py
