[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubzoid"
version = "0.1.0"
description = "Drop a folder of markdown files, get a chat agent with a polished web UI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "HubZoid contributors" }]
keywords = ["agents", "llm", "openai", "anthropic", "openrouter", "markdown", "agents.md", "mcp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "openai-agents[litellm]>=0.14.7",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13",
  "jinja2>=3.1",
]

[project.optional-dependencies]
ui = ["open-webui>=0.6"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
claude-local = ["claude-agent-sdk>=0.1.0"]

[project.scripts]
hubzoid = "hubzoid.cli:app"

[project.urls]
Homepage = "https://github.com/hubzoid/hubzoid"
Issues = "https://github.com/hubzoid/hubzoid/issues"

[tool.setuptools]
packages = ["hubzoid", "hubzoid.loaders", "hubzoid.tools"]

[tool.setuptools.package-data]
hubzoid = ["templates/starter/**/*", "templates/starter/**/.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "e2e: end-to-end test that requires a real LLM provider key",
]
